--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=BBH+Sans+Bartle&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DynaPuff:wght@400..700&display=swap');
 
 @import "tailwindcss";
 @import "tw-animate-css";
@@ -13,6 +14,14 @@
   width: 100%;
   height: 100%;
 
+}
+
+.dynapuff {
+  font-family: "DynaPuff", system-ui;
+  font-optical-sizing: auto;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 100;
 }
 
 
@@ -67,10 +76,28 @@ html {
   --sidebar-ring: oklch(0.708 0 0);
 }
 
-.bbh-sans-bartle-regular {
+.bartle {
   font-family: "BBH Sans Bartle", sans-serif;
   font-weight: 400;
   font-style: normal;
+}
+
+.bg {
+  background: #44444491;
+  background: linear-gradient(30deg, oklch(42.582% 0.00262 6.246) 5%, rgba(0, 0, 0, 1) 100%);
+  animation: shimmer 4s ease-in infinite;
+}
+
+
+
+@keyframes shimmer {
+  0% {
+    background-position: 200% 0;
+  }
+
+  100% {
+    background-position: -200% 0;
+  }
 }
 
 @theme inline {
